kubernetes/k3s-prod/cluster/ingress/argocd-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ts-ingress
  namespace: argocd
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: argocd-tailscale-svc
      port:
        name: https
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-tailscale-svc
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 443
